Added mendeley-linked chicaco citations

--- a/main.tex
+++ b/main.tex
@@ -42,10 +42,16 @@
 % This is where files are included, in order as necessary
 % Sample include with the subfiles package:
 
-\subfile{sections/sample_section}
+\subfile{sections/introduction}
 
-\newpage
+
 % Appendices
+\newpage
 \subfile{resources/appendix}
+
+% References
+\newpage
+\addcontentsline{toc}{chapter}{Bibliography}
+\printbibliography
 
 \end{document}
