[rukmal] updated README with naming conventions

--- a/main.tex
+++ b/main.tex
@@ -41,8 +41,12 @@
 
 % This is where files are included, in order as necessary
 % Sample include with the subfiles package:
+% \subfile{sections/subfile_section}
 
+% Introduction
 \subfile{sections/introduction}
+% Literature Review
+\subfile{sections/literature_review}
 
 
 % Appendices
