[rukmal] Update README with more contribution and style guides

--- a/resources/header.tex
+++ b/resources/header.tex
@@ -23,6 +23,8 @@
 %===================
 % Bibliography resource configuration
 \addbibresource{references.bib}
+% Citation formatting (in footnote)
+\newcommand{\citeFormat}[1]{\footnote{#1}}
 
 % Hyperlink Setup
 %================
