--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -4,6 +4,6 @@
     
 \chapter{Introduction}
     
-This is the introduction section, with a sample footnote citation (citations should always be made like this).\footnote{\cite{UniversityofPennsylvania-WRDSWhartonResearchDataServices2019CompustatIQ}}
+This is the introduction section, with a sample footnote citation (citations should always be made like this).\citeFormat{\cite{UniversityofPennsylvania-WRDSWhartonResearchDataServices2019CompustatIQ}}
 
 \end{document}
