[Yiyi] Update feature_selection.tex

--- a/main.tex
+++ b/main.tex
@@ -48,6 +48,11 @@
 % Literature Review
 \subfile{sections/literature_review}
 
+%Feature Selection
+\subfile{sections/feature_selection}
+
+%Hierarchical Clustering Model
+\subfile{sections/hierarchical_clustering_model}
 
 % Appendices
 \newpage
