--- a/references.bib
+++ b/references.bib
@@ -38,6 +38,13 @@
     url = {https://wrds-web.wharton.upenn.edu/wrds/query_forms/navigation.cfm?navId=60}
 }
 
+@misc{U.S.SecuritiesandExchangeCommission2019DivisionList,
+    title = {{Division of Corporation Finance: Standard Industrial Classification (SIC) Code List}},
+    year = {2019},
+    author = {{U.S. Securities and Exchange Commission}},
+    url = {https://www.sec.gov/info/edgar/siccodes.htm}
+}
+
 @book{Bergeron2003EssentialsCentury,
     title = {{Essentials of XBRL : financial reporting in the 21st century}},
     year = {2003},
@@ -70,6 +77,16 @@
     title = {{NASDAQ-100 INDEX METHODOLOGY}},
     year = {2018},
     url = {https://indexes.nasdaqomx.com/docs/methodology_NDX.pdf}
+}
+
+@book{Tedlow1996NewAmerica,
+    title = {{New and improved : the story of mass marketing in America}},
+    year = {1996},
+    author = {Tedlow, Richard S.},
+    pages = {483},
+    publisher = {Harvard Business School Press},
+    url = {https://www.amazon.com/New-Improved-Story-Marketing-America/dp/0875846726},
+    isbn = {9780875846729}
 }
 
 @techreport{Sifma2018SIFMAPrimer,
