--- a/resources/abstract.tex
+++ b/resources/abstract.tex
@@ -117,7 +117,7 @@ Following this rubric, I think we should split our project into the following se
 
     \item Future Work (deep-ish dive into 2/3 possible avenues)
     \begin{itemize}
-        \item Tune hierarchical clustering to control for lopsided disrtibution of assets in the clusters
+        \item Tune hierarchical clustering to control for lopsided disritibution of assets in the clusters
         \item Explore different synthetic ETF construction heuristics (specifically, market cap weighted)
         \item Dynamically adjusting sector assignments in the backtest (currently using a single cross-sectional sector assignment) (NOTE: maybe mention we did this earlier; didn't consider it because we didn't have the data for the benchmark)
         \item Rank existing sector classification schemes
