--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -4,6 +4,29 @@
     
 \chapter{Introduction}
     
-This is the introduction section, with a sample footnote citation (citations should always be made like this).\citeFormat{\cite{UniversityofPennsylvania-WRDSWhartonResearchDataServices2019CompustatIQ}}
+\begin{itemize}
+    \item What are sectors?
+    \item Why should I care?
+    \item What is the status quo?
+    \item Why is it broken?
+\end{itemize}
+
+The United States today is home to approximately 20,000 publicly traded corporations. Despite only a small minority capturing the public eye on a regular basis, they all contribute to the foundation on which the modern Global economy is built. As postulated by nearly all economic theory, the efficient flow of capital and information through these markets is necessary for a healthy economy.
+
+To this end, market sectors and the practice of sectorization have been an integral component of healthy markets, both in the United States and around the world. Market Sectors - in their ideal form - group together corporations of similar business function and economic operating arena for easier regulation, management, investment, etc. A related practice to that of market sectorization is Market Segmentation, the practice of dividing a market into subgroups of consumers (i.e. \textit{segments}).
+
+The evolution of Market Segments and Market Sectors have historically been extremely useful metrics for gauging the development of the economy. There are four generally accepted stages of evolution in market segmentation; fragmentation, unification, segmentation, and hyper-segmentation.\citeFormat{\cite{Tedlow1996NewAmerica}} The United States economy - being the archetype on which this four-stage heuristic was built - developed through these four stages over the course of the last two centuries. Being decidedly a \textit{hyper-segmented} market today, there is a marked shift toward ever more narrow market segments. This shift has notably been amplified by the enablement of hyper-targeted marketing and product delivery by technologies such as the smartphone.
+
+\section{Applications of Market Sectors}
+
+In addition to being a useful theoretical guideline for the stage of growth of an economy, market sectors and segments also serve extremely valuable functional roles in the modern economy.
+
+The Securities and Exchange Commission (SEC) of the United States classifies every company into a sepecific sector, as a part of its regulatory perogative.\citeFormat{\cite{U.S.SecuritiesandExchangeCommission2019DivisionList}} This is a key prerequisite to effective monitoring and governance. The sheer scope of the modern economy guarantees the necessity of such classificaitons; the current scope of the economy spans - indisputably - all facets of Human culture. This gargantuan scope demands specialization, which - in turn - demands organization; motivating the need for market sectors.
+
+Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaciton. This metric is integral to risk management, ånd relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the consituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment.
+
+NOTE: Need to find citation for the Credit rating stuff; ideall find all 3
+
+Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of hte the market.
 
 \end{document}
