[Yiyi] Upload h_c_m.tex

--- a/resources/header.tex
+++ b/resources/header.tex
@@ -12,6 +12,7 @@
 \usepackage{longtable} % Long tables
 \usepackage{parskip} % Custom skips
 \usepackage{relsize} % Relative sizing
+\usepackage{float} % Figure position
 
 \setcounter{secnumdepth}{0}
 \allowdisplaybreaks[1]
