--- a/sections/feature_selection.tex
+++ b/sections/feature_selection.tex
@@ -45,7 +45,7 @@ These features from accounting reports are indicative of underlying business str
 
 We download annual financial statements of nearly 400 companies in S\&P 500 Index from 2010 to 2017. We are going to classify these companies into new sectors. These companes are traditionally grouped into 11 sectors according to GICS, which is shown by the picture below.
 
-\begin{figure}
+\begin{figure}[H]
     \includegraphics{images/traditional_sectors.jpeg}
     \caption{feature_selection:traditional_sectors}
     \label{fig:feature_selection:traditional_sectors}
