--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,20 @@
     issn = {00010782}
 }
 
+@article{Heer2010b,
+    title = {{A tour through the visualization zoo}},
+    year = {2010},
+    journal = {Communications of the ACM},
+    author = {Heer, Jeffrey and Bostock, Michael and Ogievetsky, Vadim},
+    number = {6},
+    month = {6},
+    pages = {59},
+    volume = {53},
+    url = {http://portal.acm.org/citation.cfm?doid=1743546.1743567},
+    doi = {10.1145/1743546.1743567},
+    issn = {00010782}
+}
+
 @article{Heer2010AZoo,
     title = {{A tour through the visualization zoo}},
     year = {2010},
@@ -38,6 +52,15 @@
     url = {https://wrds-web.wharton.upenn.edu/wrds/query_forms/navigation.cfm?navId=60}
 }
 
+@techreport{StandardPoorsRatingServices2014CorporateMethodology,
+    title = {{Corporate Ratings Methodology}},
+    year = {2014},
+    author = {{Standard {\&} Poor's Rating Services}},
+    pages = {3},
+    url = {https://www.spratings.com/documents/20184/774196/Corporate+Ratings+Methodology.pdf},
+    address = {Sydney}
+}
+
 @misc{U.S.SecuritiesandExchangeCommission2019DivisionList,
     title = {{Division of Corporation Finance: Standard Industrial Classification (SIC) Code List}},
     year = {2019},
@@ -53,6 +76,16 @@
     publisher = {Wiley},
     url = {https://books.google.com/books?hl=en&lr=&id=a1NRYltkRIQC&oi=fnd&pg=PR9&dq=xbrl+financial+reporting&ots=_UUjht5HXJ&sig=_HB_cRkx-Ti6vp60nCF_LdjrDcQ#v=onepage&q=xbrl%20financial%20reporting&f=false},
     isbn = {0471458082}
+}
+
+@techreport{Hill2016FinancialMethodology,
+    title = {{Financial Institution Rating Methodology}},
+    year = {2016},
+    author = {Hill, Nick and Auquier, Roland and Bauer, Gregory and Foley, Michael and Lamonte, Mark and Drevon, Frederic},
+    pages = {133},
+    url = {www.moodys.com/methodologies},
+    institution = {Moody's Investor Service},
+    address = {New York}
 }
 
 @techreport{GICS3,
@@ -87,6 +120,15 @@
     publisher = {Harvard Business School Press},
     url = {https://www.amazon.com/New-Improved-Story-Marketing-America/dp/0875846726},
     isbn = {9780875846729}
+}
+
+@techreport{FitchRatings2019ProceduresRatings,
+    title = {{Procedures and Methodologies for Determining Credit Ratings}},
+    year = {2019},
+    author = {{Fitch Ratings}},
+    pages = {22},
+    url = {file:///Users/rukmal/Downloads/Item 5 - Form 25-101F1.pdf},
+    address = {New York}
 }
 
 @techreport{Sifma2018SIFMAPrimer,
