--- a/resources/header.tex
+++ b/resources/header.tex
@@ -8,6 +8,7 @@
 \usepackage{enumerate} % Special enumeration
 \usepackage{fancyhdr} % Fancy heders
 \usepackage[hang, bottom]{footmisc} % Advanced footer formatting
+\usepackage[toc]{glossaries} % Glossary
 \usepackage{graphicx} % Graphics
 \usepackage{longtable} % Long tables
 \usepackage{parskip} % Custom skips
