--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -15,7 +15,7 @@ The United States today is home to approximately 20,000 publicly traded corporat
 
 To this end, market sectors and the practice of sectorization have been an integral component of healthy markets, both in the United States and around the world. Market Sectors - in their ideal form - group together corporations of similar business function and economic operating arena for easier regulation, management, investment, etc. A related practice to that of market sectorization is Market Segmentation, the practice of dividing a market into subgroups of consumers (i.e. \textit{segments}).
 
-The evolution of Market Segments and Market Sectors have historically been extremely useful metrics for gauging the development of the economy. There are four generally accepted stages of evolution in market segmentation; fragmentation, unification, segmentation, and hyper-segmentation.\citeFormat{\cite{Tedlow1996NewAmerica}} The United States economy - being the archetype on which this four-stage heuristic was built - developed through these four stages over the course of the last two centuries. Being decidedly a \textit{hyper-segmented} market today, there is a marked shift toward ever more narrow market segments. This shift has notably been amplified by the enablement of hyper-targeted marketing and product delivery by technologies such as the smartphone.
+The evolution of Market Segments and Market Sectors have historically been extremely useful metrics for gauging the development of the economy. There are four generally accepted stages of evolution in market segmentation; fragmentation, unification, segmentation, and hyper-segmentation.\citeFormat{\cite{Tedlow1996NewAmerica}} The United States economy - being the archetype on which this four-stage heuristic was built - developed through these four stages over the course of the last two centuries. Being a decidedly \textit{hyper-segmented} market today, there is a marked shift toward ever more narrow market segments. This shift has notably been amplified by the enablement of hyper-targeted marketing and product delivery by technologies such as the smartphone.
 
 \section{Applications of Market Sectors}
 
@@ -23,10 +23,12 @@ In addition to being a useful theoretical guideline for the stage of growth of a
 
 The Securities and Exchange Commission (SEC) of the United States classifies every company into a sepecific sector, as a part of its regulatory perogative.\citeFormat{\cite{U.S.SecuritiesandExchangeCommission2019DivisionList}} This is a key prerequisite to effective monitoring and governance. The sheer scope of the modern economy guarantees the necessity of such classificaitons; the current scope of the economy spans - indisputably - all facets of Human culture. This gargantuan scope demands specialization, which - in turn - demands organization; motivating the need for market sectors.
 
-Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaciton. This metric is integral to risk management, ånd relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the consituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment.
+Credit rating is the practice of evaluating the risk of a prospective counterparty in a transaciton. This metric is integral to risk management, ånd relies on evaluating the probability that a candidate counterparty to a transaction will not default on their obligation. In addition to the idiosyncratic forces affecting any given corporation, its risks are often decomposed to market factors and - increasingly - market sector factors. This means that a positive outlook on a specific market sector would imply a more positive outlook for the consituent corporations composing that sector, underscoring the importance of appropriate and accurate sector assignment. The significance of accurate sector assignments is reaffirmed by the fact that all of the \textit{Big 3} credit rating agencies cite market sector rating as a key component in determining credit ratings.\citeFormat{\cite{StandardPoorsRatingServices2014CorporateMethodology}}\citeFormat{\cite{Hill2016FinancialMethodology}}\citeFormat{\cite{FitchRatings2019ProceduresRatings}}
 
-NOTE: Need to find citation for the Credit rating stuff; ideall find all 3
+Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of hte the market. It is a well-known corollary of Modern Portfolio Theory that diversification provides savings an enhanced risk-return portfolio for any given basket of assets. This, combined with the excellent cost savings provided by modern Exchange Traded Funds (hereafter \textit{ETFs}), has led to a rapid prolification of these products in the Financial System today.
 
-Finally, another major application of asset sectors is to provide investors with targeted exposure to specific segments of hte the market.
+\section{Status Quo}
+
+In the United States today, there are myriad sectorization taxonomies (hereafter \textit{sector universes})
 
 \end{document}
